--- a/Superadmin/stock/taxs/add-tax.html
+++ b/Superadmin/stock/taxs/add-tax.html
@@ -24,7 +24,7 @@
                     <li><a href="/Superadmin/companies/companies.html"><i class="fas fa-building"></i> إدارة الشركات</a></li>
                     <li><a href="/Superadmin/warehouse/warehouses.html"><i class="fas fa-warehouse"></i> إدارة المخازن</a></li>
                     <li><a href="/Superadmin/employee/employees.html"><i class="fas fa-users"></i> إدارة الموظفين</a></li>
-                    <li><a href="/Superadmin/suppliers/suppliers.html"><i class="fas fa-truck"></i> إدارة الموردين</a></li>
+                    <li><a href="/Superadmin/suppliers/suppliers.html"><i class="fas fa-truck"></i> إدارة المشتريات</a></li>
                                         <li><a href="/Superadmin/sales/sales.html"><i class="fas fa-truck"></i> إدارة المبيعات</a></li>
 
                     <li class="active"><a href="/Superadmin/stock/products/stock.html"><i class="fas fa-boxes"></i> إدارة المخزون</a></li>
